# robot_warehouse

./: README.md
my_ugv_description/: CMakeLists.txt  package.xml  ros_packages_install.txt
my_ugv_description/config/: servomotor_controller.yaml  servomotor_controller2.yaml
my_ugv_description/launch/: servo_rviz_diff_robot.launch  servomotor_diff_robot.launch
my_ugv_description/rviz/: my_diff_robot_config.rviz  my_omni_robots_config.rviz  my_sensors_robot_config.rviz
my_ugv_description/scripts/: omni_tf_4wheels.py
my_ugv_description/src/: omni_tf_4wheels.cpp
my_ugv_description/urdf/: servomotor_diff_robot_gazebo.xacro  servomotor_diff_robot_urdf.xacro
my_ugv_description/worlds/: empty.world
trixy/launch/: robot_description.launch
trixy/urdf/: trixy.gazebo  trixy.xacro
